# rm-trainer

./: .gitignore  ds_config.json  pyproject.toml  train_reward_model.py
src/: funny.py  process_data.py  process_general_data.py  process_slop_data.py  qwen2_rm.py  rm_trainer.py  scaled_reward_trainer.py  scaled_sft_trainer.py  slop_dataset.py  slop_reward_dataset.py  train.py
src/processing/: process_chat_data.py  process_general_data.py  process_pi_data.py  process_restoration_data.py  process_slop_data.py
