[project]
name = "rm-trainer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.2.0",
    "pandas>=2.2.3",
    "torch>=2.6.0",
    "transformers>=4.48.3",
    "trl>=0.14.0",
    "wandb>=0.19.6",
    "deepspeed>=0.15.0",
    "accelerate>=0.4.10",
    "flash-attn>=2.5.1",
    "liger-kernel>=0.1.0"
]
